# SpeedBlocks-server

./: .gitignore  .gitmodules  CMakeLists.txt  Challenges.cpp  Challenges.h  Challonge.h  Client.cpp  Client.h  ClientHistory.cpp  ClientHistory.h  Connections.cpp  Connections.h  EloResults.cpp  JSONWrap.cpp  JSONWrap.h  Lobby.cpp  Lobby.h  Makefile  MingwConvert.cpp  MingwConvert.h  PacketCompress.cpp  PacketCompress.h  Packets.cpp  Packets.txt  PingHandle.cpp  README  Room.cpp  Room.h  Tournament.cpp  Tournament.h  VSMatch.cpp  main.cpp  network.cpp  network.h
Challenges/: challenges.list
serverUtils/: challenge_score.php  check_for_patch.php  crashrestart  forward_to_discord.php  get_challenges.php  get_stats.php  hash_check.php  index.php  make_patch.py  makebackup  put_stats.php  ranking_update_event.sql  rankings.php  report_tournament.php  secure_auth.php  set_usersonline.php  start_page.html  update_trigger.sql  version_info.json
src/: Challenges.cpp  Challenges.h  Challonge.cpp  Client.cpp  Client.h  ClientHistory.h  Connections.cpp  EloResults.cpp  EloResults.h  JSONWrap.cpp  JSONWrap.h  PacketCompress.cpp  PacketCompress.h  PingHandle.h  Replay.cpp  Replay.h  Room.cpp  Room.h  Tournament.cpp  Tournament.h  VSMatch.h  main.cpp
src/AI/: AI.cpp  AI.h  Combo.cpp  Combo.h  Garbage.cpp  Garbage.h  TestField.cpp  TestField.h  gameField.cpp  gameField.h  randomizer.cpp  randomizer.h
src/components/: Challenges.cpp  Challenges.h  Handicap.cpp  Handicap.h  Tournament.cpp  Tournament.h
src/core/: Client.cpp  Client.h  Connections.cpp  Connections.h  Lobby.cpp  Lobby.h
src/rooms/: AIManager.cpp  AIManager.h  LineSendAdjust.cpp  LineSendAdjust.h  Room.cpp  Room.h  RoomHolder.cpp  RoomHolder.hpp
src/utility/: AsyncTask.cpp  AsyncTask.h  Challonge.h  ClientHistory.cpp  ClientHistory.h  EloResults.cpp  EloResults.h  GameSignals.cpp  GameSignals.h  Holder.hpp  JSONWrap.cpp  JSONWrap.h  PacketCompress.cpp  PacketCompress.h  PacketCompressServer.cpp  PacketCompressServer.h  PingHandle.cpp  PingHandle.h  Replay.cpp  Replay.h  StatsHolders.cpp  StatsHolders.h  TaskQueue.cpp  TaskQueue.h  VSMatch.cpp  VSMatch.h
